Updates to code and documents

--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -161,7 +161,7 @@
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.36]{./assets/figure_1.png}
-\caption{Plot showing number of agreements signed by the 26 UN actors in the analysis. See Table 3 below for exact values.}
+\caption{Number of agreements signed by the 26 UN actors in the analysis. See Table 3 below for exact values.}
 \end{center}
 \end{figure}
 
@@ -245,7 +245,7 @@ United Nations Population Fund & 1 \\
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.38]{./assets/figure_3.png}
-\caption{Network diagram of UN co-signatories. The number of agreements signed by a pair of UN actors is the red number in the connection between the pair. Isolated nodes (known as singletons) are UN actors with no UN co-signatories. See Table 5 for further information.}
+\caption{Network diagram of UN co-signatories. The number of agreements signed by a pair of UN actors is the red number in the connection between the pair. Isolated nodes (known as singletons) are UN actors with no UN co-signatories. See Tables 5 and 6 for further information.}
 \end{center}
 \end{figure}
 
@@ -389,7 +389,136 @@ UNMISS (IGO\_831) \\
 
 \subsection{UN and non-UN co-signatories}
 
-\subsection{Case Study: United Nations (General) }
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.38]{./assets/figure_4.png}
+\caption{Number of agreements signed by the top-20 UN and non-UN co-signatories across all peace processes. In total there are 536 actors in the UN--non-UN co-signatory set.}
+\end{center}
+\end{figure}
+
+\begin{table}[H]
+\begin{center}
+\small
+\begin{tabularx}{\textwidth}{|X|X|r|}
+    \hline
+    \textbf{UN actor} & \textbf{Non-UN actor} & \textbf{Agts} \\
+    \hline
+    \hline
+United Nations (General) (IGO\_49) & African Union (IGO\_87) & 65 \\
+\hline
+United Nations (General) (IGO\_49) & United States (CON\_3) & 62 \\
+\hline
+United Nations (General) (IGO\_49) & European Union (IGO\_5) & 51 \\
+\hline
+United Nations (General) (IGO\_49) & France (CON\_7) & 47 \\
+\hline
+United Nations (General) (IGO\_49) & Russia (CON\_21) & 47 \\
+\hline
+United Nations (General) (IGO\_49) & United Kingdom (CON\_19) & 41 \\
+\hline
+United Nations (General) (IGO\_49) & Organization of African Unity (IGO\_43) & 30 \\
+\hline
+United Nations (General) (IGO\_49) & Georgia (CON\_45) & 28 \\
+\hline
+United Nations (General) (IGO\_49) & Germany (CON\_2) & 28 \\
+\hline
+United Nations (General) (IGO\_49) & Abkhazia (ENT\_46) & 27 \\
+\hline
+United Nations (General) (IGO\_49) & South Africa (CON\_221) & 24 \\
+\hline
+United Nations (General) (IGO\_49) & Sudan (CON\_158) & 22 \\
+\hline
+United Nations (General) (IGO\_49) & Congo, Democratic Republic of the (CON\_264) & 21 \\
+\hline
+United Nations (General) (IGO\_49) & Organization for Security and Cooperation in Europe (IGO\_50) & 21 \\
+\hline
+United Nations (General) (IGO\_49) & Economic Community of West African States (IGO\_89) & 20 \\
+\hline
+United Nations (General) (IGO\_49) & China (CON\_20) & 20 \\
+\hline
+United Nations (General) (IGO\_49) & Nigeria (CON\_90) & 20 \\
+\hline
+United Nations (General) (IGO\_49) & Uganda (CON\_176) & 20 \\
+\hline
+United Nations (General) (IGO\_49) & Norway (CON\_81) & 19 \\
+\hline
+United Nations (General) (IGO\_49) & Canada (CON\_11) & 19 \\
+\hline
+United Nations (General) (IGO\_49) & Somalia (CON\_358) & 19 \\
+\hline
+United Nations (General) (IGO\_49) & League of Arab States (IGO\_346) & 19 \\
+\hline
+United Nations (General) (IGO\_49) & Kenya (CON\_172) & 18 \\
+\hline
+United Nations (General) (IGO\_49) & Tajikistan (CON\_62) & 18 \\
+\hline
+UNPROFOR (IGO\_355) & Republika Srpska (ARM\_313) & 18 \\
+\hline
+United Nations (General) (IGO\_49) & Italy (CON\_139) & 17 \\
+\hline
+United Nations (General) (IGO\_49) & Guatemala  (CON\_306) & 17 \\
+\hline
+UNPROFOR (IGO\_355) & Bosnia and Herzegovina (CON\_0) & 16 \\
+\hline
+United Nations (General) (IGO\_49) & Organisation of Islamic Cooperation (IGO\_226) & 15 \\
+\hline
+United Nations (General) (IGO\_49) & Guatemalan National Revolutionary Unity (ARM\_307) & 15 \\
+\hline
+\end{tabularx}
+\end{center}
+\normalsize
+\caption{Top-30 UN--non-UN co-signatory pairings with number of agreements in common. The total number of UN--non-UN actor pairings is 1287.}
+\end{table}
+
+\pagebreak
+
+\begin{table}[H]
+\begin{center}
+\small
+\begin{tabularx}{\textwidth}{|X|X|r|}
+    \hline
+    \textbf{UN actor} & \textbf{Non-UN actor} & \textbf{Agts} \\
+    \hline
+    \hline
+United Nations Secretariat (IGO\_391) & World Food Program (IGO\_673) & 1 \\
+\hline
+United Nations Secretariat (IGO\_391) & UN Office on Drugs and Crimes (IGO\_672) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & North Macedonia (CON\_610) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Luxembourg (CON\_611) & 1 \\
+\hline
+UN Office on Drugs and Crimes (IGO\_672) & Luxembourg (CON\_611) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Finland (CON\_171) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Bulgaria (CON\_589) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Slovenia (CON\_14) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Sweden (CON\_593) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & Organization for Security and Cooperation in Europe (IGO\_50) & 1 \\
+\hline
+Office of the United Nations High Commissioner for Human Rights (IGO\_640) & High Commission for Refugees (IGO\_65) & 1 \\
+\hline
+UN Office on Drugs and Crimes (IGO\_672) & Finland (CON\_171) & 1 \\
+\hline
+UNSMIL (IGO\_750) & Congo (CON\_42) & 1 \\
+\hline
+UN Office on Drugs and Crimes (IGO\_672) & Iran (Islamic Republic of) (CON\_289) & 1 \\
+\hline
+UN Office on Drugs and Crimes (IGO\_672) & World Food Program (IGO\_673) & 1 \\
+\hline
+\end{tabularx}
+\end{center}
+\normalsize
+\caption{Bottom-15 UN--non-UN co-signatory pairings with number of agreements in common. The total number of UN--non-UN actor pairings is 1287.}
+\end{table}
+
+\pagebreak
+
+\section{Case Study: United Nations (General) }
 
 The analysis described below can be applied to any actor.
 
