Updates to notebook, data, and doc

--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -39,6 +39,23 @@
 \tableofcontents
 \newpage
 
+\section{Introduction}
+
+The analysis is based on the following signatory data files supplied by Niamh Henry on 03/11/2023:
+
+\begin{itemize}
+\item links\_table.csv
+\item node\_table.csv
+\end{itemize}
+
+The search criteria for UN actors are as follows:
+
+\begin{itemize}
+\item The actor \texttt{node\_id} value must start with 'IGO\_' or 'COA\_'.
+\item The actor \texttt{node\_name} value must contain 'United Nations' or ' UN', or start with 'UN'.
+\end{itemize}
+
+
 \section{Preliminaries}
 
 \subsection{List of UN Actors}
