--- a/un_analysis.ipynb
+++ b/un_analysis.ipynb
@@ -464,7 +464,7 @@
     "        print(s)\n",
     "        print('\\\\hline')\n",
     "\n",
-    "latex = True\n",
+    "latex = False\n",
     "if latex:\n",
     "    for t in scores[-15:]:\n",
     "        a = []\n",
@@ -488,11 +488,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Case study: United Nations (General)"
+   ]
   },
   {
    "cell_type": "code",
