--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -548,6 +548,18 @@ United Nations Human Rights Council (IGO\_440) & High Commission for Refugees (I
 
 The analysis described below can be applied to any actor.
 
+Analysis by:
+
+\begin{itemize}
+\item Co-signatories
+\item Agreements with co-signatories (top-n)
+\item Year - time series
+\item Peace Process
+\item Agreement stage
+\item Other metadata (region?)
+\end{itemize}
+ 
+
 \end{document}
 
 
