--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -559,6 +559,51 @@ Analysis by:
 \item Other metadata (region?)
 \end{itemize}
  
+\subsection{Time series analysis}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.36]{./assets/figure_5.png}
+\caption{Number of agreements signed in a year by United Nations (General) (blue) and all actors (orange).}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.36]{./assets/figure_6.png}
+\caption{Percentage of all agreements in a year signed by United Nations (General) .}
+\end{center}
+\end{figure}
+
+\subsection{Single year analysis}
+
+In-depth analysis of the six agreements signed in 2015. Any year can be selected for analysis.
+
+\begin{table}[H]
+\begin{center}
+\small
+\begin{tabularx}{\textwidth}{|l|X|}
+    \hline
+    \textbf{Agreement ID}  & \textbf{Agreement name} \\
+    \hline
+AGT\_1367 & Arrangement sécuritaire pour une cessation des hostilités \\
+\hline
+AGT\_1357 & Agreement on the Resolution of the Conflict in the Republic of South Sudan (ARCSS) \\
+\hline
+AGT\_2035 & Agreement between the Transitional Government and the armed groups on the principles of disarmament, demobilization, reintegration and repatriation and of integration into the uniformed State forces of the Central African Republic (DDRR Agreement) \\
+\hline
+AGT\_1652 & Final declaration on the results of the Syria Talks in Vienna as agreed by participants \\
+\hline
+AGT\_1366 & Relevé de Conclusions des Consultations Préparatoires a la mise en œuvre de l'Accord pour la Paix et la Reconciliation au Mali Issu du Procesus d'Alger \\
+\hline
+AGT\_1436 & The Nationwide Ceasefire Agreement (NCA) between The Government of the Republic of the Union of Myanmar and the Ethnic Armed Organizations (EAO) \\
+\hline
+\end{tabularx}
+\end{center}
+\normalsize
+\caption{Agreements signed by United Nations (General) (IGO\_49) in 2015.}
+\end{table}
+
 
 \end{document}
 
