--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -226,7 +226,7 @@
    ],
    "source": [
     "\n",
-    "# Convert a peace process BVRM to an adjacency matrix\n",
+    "# Convert a peace process biadjacency matrix to an adjacency matrix\n",
     "adj_matrix,adj_vertices = adjacency_from_biadjacency(pp_data_dict)\n",
     "\n",
     "query_vertices = ['CON_19','CON_20','CON_21']\n",
