--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -616,7 +616,42 @@ AGT\_2035 & Agreement between the Transitional Government and the armed groups o
 \end{center}
 \end{figure}
 
+\begin{table}[H]
+\begin{center}
+\small
+\begin{tabularx}{\textwidth}{|X|r|}
+    \hline
+    \textbf{Variable} & \textbf{Value} \\
+    \hline
+    \hline
+     Number of peace processes in dataset & 152 \\
+     \hline
+     Number of peace processes in which United Nations (General) was a signatory to at least one agreement & 57 \\
+     \hline
+\end{tabularx}
+\end{center}
+\normalsize
+\caption{Peace process numerical data.}
+\end{table}
+
 \subsubsection{Agreement stage}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.40]{./assets/figure_8.png}
+\caption{Agreements signed by agreement stage.}
+\end{center}
+\end{figure}
+
+\subsubsection{Region}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.40]{./assets/figure_9.png}
+\caption{Agreements signed by region.}
+\end{center}
+\end{figure}
+
 
 \end{document}
 
