--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -652,6 +652,17 @@ AGT\_2035 & Agreement between the Transitional Government and the armed groups o
 \end{center}
 \end{figure}
 
+\pagebreak
+\subsubsection{Stage-Region}
+
+Explores the interaction of stage and region for agreements signed by the United Nations (General) actor.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.33]{./assets/figure_10.png}
+\caption{Heat map showing agreements signed for stage-region pairs.}
+\end{center}
+\end{figure}
 
 \end{document}
 
