--- a/un_analysis.ipynb
+++ b/un_analysis.ipynb
@@ -1003,8 +1003,8 @@
     "plt.imshow(sr_matrix,cmap=plt.cm.Blues)\n",
     "plt.yticks(range(0,len(stage_list)),stage_list,fontsize='xx-large')\n",
     "plt.xticks(range(0,len(region_list)),region_list,rotation=90,fontsize='xx-large')\n",
-    "cbar = plt.colorbar()\n",
-    "cbar.set_label('Number of agreements',rotation=270,labelpad=15,fontsize='xx-large')\n",
+    "#cbar = plt.colorbar()\n",
+    "#cbar.set_label('Number of agreements',rotation=270,labelpad=15,fontsize='xx-large')\n",
     "plt.title('Stage-Region Matrix',fontsize='xx-large')\n",
     "for (j,i),value in np.ndenumerate(sr_matrix):\n",
     "    plt.text(i,j,value,ha='center',va='center',color='red',fontsize='xx-large',alpha=0.9)\n",
