--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -257,7 +257,7 @@ United Nations Population Fund & IGO\_674 & 1 \\
 \caption{Number of agreements signed by UN actors in descending order. See Figure 1 above.}
 \end{table}
 
-\section{UN Actors Co-signatory Analysis}
+\section{UN Actors Co-Signatory Analysis}
 
 \subsection{UN--UN co-signatories}
 
