--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -553,14 +553,14 @@ The analysis described below can be applied to any actor.
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.36]{./assets/figure_5.png}
-\caption{Number of agreements signed in a year by United Nations (General) (blue) and aggregated actors (orange). The Pearson correlation coefficient of the two distributions is 0.78, p $<$ 0.001.}
+\caption{Number of agreements signed by year by United Nations (General) (blue) and aggregated actors (orange). The Pearson correlation coefficient of the two distributions is 0.78, p $<$ 0.001.}
 \end{center}
 \end{figure}
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.36]{./assets/figure_6.png}
-\caption{Percentage of all agreements in a year signed by United Nations (General).}
+\caption{Percentage of all agreements signed by United Nations (General) by year.}
 \end{center}
 \end{figure}
 
@@ -643,12 +643,26 @@ AGT\_2035 & Agreement between the Transitional Government and the armed groups o
 \end{center}
 \end{figure}
 
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.36]{./assets/figure_11.png}
+\caption{Number of agreements signed by year for the top-scoring stages. The Pearson correlation coefficient of the two distributions is 0.44, p $<$ 0.01.}
+\end{center}
+\end{figure}
+
 \subsubsection{Region}
 
 \begin{figure}[H]
 \begin{center}
 \includegraphics[scale=0.40]{./assets/figure_9.png}
 \caption{Agreements signed by region.}
+\end{center}
+\end{figure}
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.36]{./assets/figure_12.png}
+\caption{Number of agreements signed by year for the top-scoring regions. The Pearson correlation coefficient of the two distributions is 0.02, p $=$ 0.88.}
 \end{center}
 \end{figure}
 
