--- a/_doc/un_analysis/un_analysis.tex
+++ b/_doc/un_analysis/un_analysis.tex
@@ -678,6 +678,14 @@ Explores the interaction of stage and region for agreements signed by the United
 \end{center}
 \end{figure}
 
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[scale=0.38]{./assets/figure_13.png}
+\caption{Network diagram of stage-region interactions. The number of agreements is the red number in the connection between the pair.}
+\end{center}
+\end{figure}
+
 \end{document}
 
 
