--- a/un_analysis.ipynb
+++ b/un_analysis.ipynb
@@ -822,7 +822,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "stage_list = [t[0] for t in stage_map]\n",
@@ -855,6 +857,38 @@
     "plt.title('Stage-Region Matrix',fontsize='xx-large')\n",
     "for (j,i),value in np.ndenumerate(sr_matrix):\n",
     "    plt.text(i,j,value,ha='center',va='center',color='red',fontsize='xx-large',alpha=0.9)\n",
+    "plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "size = sr_matrix.shape[0] + sr_matrix.shape[1]\n",
+    "adjacency_matrix = np.zeros((size,size)).astype(int)\n",
+    "\n",
+    "row_index = 0\n",
+    "col_index = sr_matrix.shape[0]\n",
+    "adjacency_matrix[row_index:row_index + sr_matrix.shape[0],\\\n",
+    "       col_index:col_index + sr_matrix.shape[1]] = sr_matrix\n",
+    "# Add in the lower triangle\n",
+    "adjacency_matrix = adjacency_matrix + adjacency_matrix.T    \n",
+    "adj_vertices = []\n",
+    "adj_vertices.extend(stage_list)\n",
+    "adj_vertices.extend(region_list)\n",
+    "\n",
+    "# Network diagram\n",
+    "vertex_indices = range(0,len(adj_vertices))\n",
+    "node_labels = {i:adj_vertices[index] for i,index in enumerate(vertex_indices)}\n",
+    "node_colors = [twenty_distinct_colors[0] if v in stage_list else twenty_distinct_colors[1] for\\\n",
+    "               v in adj_vertices]\n",
+    "graph = nx.from_numpy_array(adjacency_matrix, create_using=nx.Graph)\n",
+    "f = plt.figure(figsize=(16,16))\n",
+    "pos = nx.circular_layout(graph) \n",
+    "nx.draw_networkx(graph,pos,labels=node_labels,node_color=node_colors,node_size=200,alpha=0.6)\n",
+    "# Get the edge labels\n",
+    "rc = np.nonzero(adjacency_matrix) # Row and column indices of non-zero pairs\n",
+    "z = list(zip(list(rc[0]),list(rc[1])))\n",
+    "edge_labels = {t:adjacency_matrix[t[0]][t[1]] for t in z}\n",
+    "nx.draw_networkx_edge_labels(graph, pos,edge_labels,font_color='red',font_size=12)\n",
+    "plt.grid(False)\n",
     "plt.show()\n"
    ]
   },
