--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -823,9 +823,9 @@
     "    cosignatories = get_agreement_cosignatories([agreement,coagree],pp_data_dict)\n",
     "    for cosign in cosignatories:\n",
     "        if cosign in cosign_agreement_dict:\n",
-    "            cosign_agreement_dict[cosign].append(coagree)\n",
+    "            cosign_agreement_dict[cosign].append((coagree,get_agreement_name(coagree,data_dict)))\n",
     "        else:\n",
-    "            cosign_agreement_dict[cosign] = [coagree]\n",
+    "            cosign_agreement_dict[cosign] = [(coagree,get_agreement_name(coagree,data_dict))]\n",
     "for cosign,agreements in cosign_agreement_dict.items():\n",
     "    print(cosign)\n",
     "    print(agreements)\n",
