--- a/signatories_streamlit.ipynb
+++ b/signatories_streamlit.ipynb
@@ -796,7 +796,7 @@
     "agreement_ids = list(set(agreement_ids))\n",
     "agreements = []\n",
     "for agreement_id in agreement_ids:\n",
-    "    agreements.append((agreement_id,get_agreement_name(agreement_id,data_dict),get_agreement_name(agreement_id,data_dict)))\n",
+    "    agreements.append((agreement_id,get_agreement_name(agreement_id,data_dict),get_agreement_date(agreement_id,data_dict)))\n",
     "\n",
     "agreements = sorted(agreements,key=lambda t:t[2])\n",
     "for t in agreements:\n",
